@@ -175,6 +175,7 @@ task runStrategy(type: JavaExec) {
     main = 'com.github.shk0da.goldendragon.GoldenDragon'
     classpath = sourceSets.test.runtimeClasspath
     workingDir = rootDir
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
     def strategyName = project.findProperty('strategy') ?: 'RegimeAwareStrategy'
     args strategyName
 }
